--- a/src/css/header.css
+++ b/src/css/header.css
@@ -8,7 +8,7 @@
   .bar {
     width: 35px;
     height: 5px;
-    background-color: white;
+    /* background-color: white; */
     margin: 6px 0;
   }
 
