--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Cinzel&display=swap');
 
 body {
+  font-family: 'Cinzel', serif;
+  background-color: #72767f;
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: blue;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-}
-
-body {
-  font-family: 'Cinzel', serif;
 }
 .content {
   margin-top: 25px;
