--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -1,9 +1,9 @@
-a {
-  text-decoration: none;
+/* a {
+  /* text-decoration: none; */
   color: white;
   font-family: 'Cinzel', serif;
   font-size: 3em;
-}
+} */
 .contact {
   margin-top: 125px;
 }
