--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,5 +1,11 @@
+@import url('https://fonts.googleapis.com/css?family=Cinzel&display=swap');
+
 body {
   font-family: 'Cinzel', serif;
+  background-color: #72767f;
+  margin: 0;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 .content {
   margin-top: 25px;
